Fixed styles on firefox and linux chrome

--- a/app/desktop/desktop.less
+++ b/app/desktop/desktop.less
@@ -79,3 +79,13 @@
 		}
 	}
 }
+
+// LINUX FIX
+#desktop {
+	-moz-flex-flow: row wrap;
+	-webkit-flex-flow: row wrap;
+	.action a {
+		-moz-flex-flow: column;
+		-webkit-flex-flow: column;
+	}
+}
